--- a/src/output.css
+++ b/src/output.css
@@ -544,17 +544,1014 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-h1 {
-  font-size: 3.75rem;
-  line-height: 1;
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+/* HEADER */
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-position: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 1024px) {
+  .header__wrapper {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+}
+
+nav {
+  position: absolute;
+  top: 75px;
+  left: -100%;
+  z-index: 10;
+  height: 100%;
+  width: 100%;
+  border-top-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.5s;
+}
+
+@media (min-width: 1024px) {
+  nav {
+    position: static;
+    border-style: none;
+  }
+}
+
+.open {
+  left: 0px;
+  width: 100%;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+@media (min-width: 1024px) {
+  .nav-links {
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 14px;
+  }
+}
+
+.nav-links ul li {
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+@media (min-width: 1024px) {
+  .nav-links li {
+    position: relative;
+  }
+
+  .nav-links li::after {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    display: block;
+    height: 5px;
+    width: 0px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+    --tw-content: '';
+    content: var(--tw-content);
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  }
+}
+
+.nav-links li:hover::after {
+  left: 0px;
+  width: 100%;
+}
+
+.nav-links li a {
+  position: relative;
+  display: inline-block;
+  height: 60px;
+  width: 100%;
+  line-height: 60px;
   --tw-text-opacity: 1;
-  color: rgb(77 124 15 / var(--tw-text-opacity));
+  color: rgb(106 16 63 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.nav-links li a:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .nav-links li a {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .nav-links li a:hover {
+    background-color: transparent;
+    --tw-text-opacity: 1;
+    color: rgb(106 16 63 / var(--tw-text-opacity));
+  }
+}
+
+/* SUB MENU */
+
+@media (min-width: 1024px) {
+  .dropdown-parent {
+    position: relative;
+  }
+}
+
+.nav-links-dropdown {
+  position: relative;
+  left: 0px;
+  display: none;
+  border-top-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 15 45 / var(--tw-bg-opacity));
+  padding: 1.25rem;
+  padding: 0px;
+}
+
+@media (min-width: 1024px) {
+  .nav-links-dropdown {
+    position: absolute;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    line-height: 30px;
+  }
+}
+
+.nav-links-dropdown li {
+  border-style: none;
+}
+
+.nav-links-dropdown li:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 1024px) {
+  .nav-links-dropdown li {
+    width: 300px;
+  }
+
+  .nav-links-dropdown li:hover {
+    background-color: transparent;
+  }
+
+  .nav-links-dropdown li::after {
+    bottom: 0.5rem;
+    height: 2px;
+  }
+}
+
+.nav-links-dropdown li a {
+  height: auto;
+  padding: 0px !important;
+  line-height: 1.6;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .nav-links-dropdown li a {
+    text-align: left;
+    --tw-text-opacity: 1;
+    color: rgb(106 16 63 / var(--tw-text-opacity));
+  }
+}
+
+.nav-links-dropdown.active {
+  display: block;
+}
+
+a.active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.burger__menu span {
+  position: absolute;
+  left: 0px;
+  display: block;
+  height: 8px;
+  width: 100%;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+  opacity: 1;
+}
+
+.burger__menu span:nth-child(1) {
+  top: 0px;
+  opacity: 1;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu span:nth-child(2) {
+  top: 15px;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu span:nth-child(3) {
+  top: 15px;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu span:nth-child(4) {
+  top: 30px;
+  opacity: 1;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu.open span:nth-child(1) {
+  top: 15px;
+  left: 50%;
+  width: 0px;
+  opacity: 0;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu.open span:nth-child(2) {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu.open span:nth-child(3) {
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.burger__menu.open span:nth-child(4) {
+  top: 15px;
+  left: 50%;
+  width: 0px;
+  opacity: 0;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+/* BANNER */
+
+.banner {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.banner .bg {
+  background-image: url(../dist/img/bg3.svg);
+  background-position: right;
+  background-repeat: no-repeat;
+}
+
+/* ABOUT */
+
+.about .about__wrapper {
+  margin-bottom: 1.5rem;
+}
+
+/* LIST what we offer */
+
+.service {
+  background-image: url(../dist/img/bgservices.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.service .service__wrapper .service__title img {
+  margin: auto;
+  display: block;
+  width: 60%;
+}
+
+.service .service__wrapper .service__list .service__title ul {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+/* EVENTS */
+
+.events .events__wrapper .event__card {
+  gap: 2.5rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  -o-object-fit: fill;
+     object-fit: fill;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  padding-bottom: 2.5rem;
+  text-align: center;
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  overflow: clip;
+}
+
+.events .events__wrapper .event__card img {
+  -o-object-fit: fill;
+     object-fit: fill;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.events .events__wrapper .event__card img:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.events .events__wrapper .event__card img {
+  height: auto;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.events .events__wrapper .event__card h4 {
+  margin-bottom: 1rem;
+}
+
+.events .events__wrapper .event__card p {
+  margin-bottom: 5rem;
+}
+
+.events .events__wrapper .event__card .eventcard__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.events .events__wrapper .event__card .eventcard__img img {
+  margin-bottom: 2.5rem;
+}
+
+.events .events__wrapper .event__card h4 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+
+/* SLIDER */
+
+.testimonial__wrapper .tns-outer {
+  position: relative;
+}
+
+.testimonial__wrapper .tns-nav {
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  z-index: 999;
+  --tw-translate-x: -50%;
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.testimonial__wrapper .tns-nav button {
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+  height: 15px;
+  width: 15px;
+  border-radius: 9999px;
+  border-style: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+}
+
+.testimonial__wrapper button.tns-nav-active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(190 42 118 / var(--tw-bg-opacity));
+}
+
+/* FOOTER */
+
+/* ABOUT US */
+
+/* MISSION VISSION */
+
+.vission span {
+  font-weight: 700;
+}
+
+.vission .vission__wrapper .vission__card {
+  display: grid;
+  place-items: center;
+}
+
+@media (min-width: 768px) {
+  .vission .vission__wrapper .vission__card {
+    place-items: start;
+  }
+}
+
+.vission .vission__wrapper .vission__card h4 {
+  margin-bottom: 1.25rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+
+.vission .vission__wrapper .vission__card  .vission__img {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* CTA */
+
+.cta {
+  background-image: radial-gradient(circle farthest-side at center bottom,#e81a86,#6a103f 125%);
+}
+
+/* partners */
+
+/* .partners .partners__wrapper .partner__col ul{
+        @apply
+        grid
+        grid-rows-6
+        place-items-center
+        items-center
+    } */
+
+.partners .partners__wrapper .partner__col ul {
+  margin-bottom: 5rem;
+  gap: 5rem;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.static {
+  position: static;
+}
+
+.relative {
+  position: relative;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-\[\.5rem\] {
+  margin-bottom: .5rem;
+}
+
+.mb-\[1\.5rem\] {
+  margin-bottom: 1.5rem;
+}
+
+.mb-\[3rem\] {
+  margin-bottom: 3rem;
+}
+
+.mb-\[4rem\] {
+  margin-bottom: 4rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-\[13rem\] {
+  margin-right: 13rem;
+}
+
+.mt-\[5rem\] {
+  margin-top: 5rem;
+}
+
+.block {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
+.max-h-\[4\.5rem\] {
+  max-height: 4.5rem;
+}
+
+.w-\[40px\] {
+  width: 40px;
+}
+
+.max-w-\[4\.5rem\] {
+  max-width: 4.5rem;
+}
+
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
+.animate-wave {
+  animation: Gradient 15s ease forwards;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.list-circle {
+  list-style-type: circle;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.place-items-center {
+  place-items: center;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-\[1rem\] {
+  gap: 1rem;
+}
+
+.gap-\[5rem\] {
+  gap: 5rem;
+}
+
+.text-wrap {
+  text-wrap: wrap;
+}
+
+.border-\[\#b1b1b1\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(177 177 177 / var(--tw-border-opacity));
+}
+
+.bg-\[\#f5f5f5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-accent {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+}
+
+.bg-section {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-Bgservices {
+  background-image: url(../dist/img/bgservices.jpg);
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
+.px-\[1rem\] {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-\[5rem\] {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-\[1rem\] {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-\[5rem\] {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[2rem\] {
+  font-size: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.text-accent {
+  --tw-text-opacity: 1;
+  color: rgb(106 16 63 / var(--tw-text-opacity));
+}
+
+.text-dark {
+  --tw-text-opacity: 1;
+  color: rgb(98 98 98 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-light {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.bck-top {
+  position: fixed;
+  bottom: 30px;
+  right: 200px;
+  z-index: 9999;
+  display: none;
+  text-align: center;
+  padding: 5px 15px;
+  text-decoration: none;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  border: 1px solid #ddd;
+}
+
+.bck-top svg {
+  fill: #fff;
+  width: 3rem;
+  height: 3rem;
+}
+
+.btn {
+  display: inline-block;
+  border-radius: 9999px;
+  border-width: 1px;
+  border-color: transparent;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn:hover {
+  --tw-scale-x: 0.9;
+  --tw-scale-y: 0.9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.btn.bg--light {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(106 16 63 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(106 16 63 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn.bg--light:hover {
+  --tw-border-opacity: 0;
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 228 231 / var(--tw-bg-opacity));
+}
+
+.btn.bg--dark {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(106 16 63 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 16 63 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn.bg--dark:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(106 16 63 / var(--tw-text-opacity));
+}
+
+.btn.bg--light-cta {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  background-color: transparent;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn.bg--light-cta:hover {
+  --tw-border-opacity: 0;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(106 16 63 / var(--tw-text-opacity));
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  max-width: 90rem;
+  max-width: 95rem;
   padding: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .banner .md\:bg {
+    background-image: url(../dist/img/bg3.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .md\:mr-\[36rem\] {
+    margin-right: 36rem;
+  }
+
+  .md\:mr-\[39rem\] {
+    margin-right: 39rem;
+  }
+
+  .md\:grid {
+    display: grid;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:place-items-start {
+    place-items: start;
+  }
+
+  .md\:border-r-2 {
+    border-right-width: 2px;
+  }
+
+  .md\:px-\[10rem\] {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .lg\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
+  .lg\:pt-16 {
+    padding-top: 4rem;
+  }
 }
